--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <span class="title">OTRO CONTACTO:</span>
             <div class="miniContainer">
                 <ul>
-                    <li>LinkedIn: <a href="https://www.linkedin.com/in/manuel-ortelli-861bab18b/">https://www.linkedin.com/in/manuel-ortelli-861bab18b/</a>  </li>
-                    <li>GitHub: <a href=" https://github.com/manuortelli"> https://github.com/manuortelli</a></li>
+                    <li class="negrita">LinkedIn: <a href="https://www.linkedin.com/in/manuel-ortelli-861bab18b/">https://www.linkedin.com/in/manuel-ortelli-861bab18b/</a>  </li>
+                    <li class="negrita">GitHub: <a href=" https://github.com/manuortelli"> https://github.com/manuortelli</a></li>
                 </ul>
             </div>
         </div>
