--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="initial-scale=1">    
+        <meta name="viewport" content="maximum-scale=1">
     <title>Manuel Ortelli CV</title>
 </head>
 
